=================
Version 1.6.0.0
=================

New Features:
- New Debug interface for reading the debug log and running debug commands.
- Scene selection inplemented. Teases can define which Scenes are eligible
  to start from and the Title Card of those Scenes.
- Node debugger implemented.

Fixed Bugs:
- Scene Resources update if the resource is removed or changed somewhere else.
- Fixed some constellations of Scene transitions that failed to transition
  correctly.
- Fixed a race condition when executing scripts. The new implementation is completely
  decoupled from the UI. Even if the UI elements are deleted while executing
  the scripts, the script will continue to execute though the commands will do nothing.

=================
Version 1.5.1.0
=================

Fixed Bugs:
- Fixed a bug calling showText in the EvalRunner not workng.

=================
Version 1.5.0.0
=================

New Features:
- Dialog editor and PlayerTextBox functions to support Dialogs has been added.
  - getDialog: Gets a Dialog object's data.
  - showDialog: Shows a Dialog with the configured parameters
- Achievement and Save systems implemented
- New button in Layout to hide the UI of the player.
- Asynch scripts now instanciate a variable "project" by default. Similar to how
  Scene Scripts instanciate "scene" to access data in the project.

Changes:
- Editor icons visible in the dropdown menu.
- PlayerTextBox.showText has an optional 4th argument that is the name of a Sound resource
  or a reference to a Resource object. If given it will play the Resource, as well as
  show the text.
- Player buttons have a tooltip.
- The first argument of PlayerTextBox showInput if now the default value. If you save an
  older project in 1.5.0+ make sure to check showInput uses if you used the old first
  parameter and change to showInput("", ...). Old Projects that aren't saved in 1.5.0+
  continue to work as they did before.
- Missing Resources show a warning in the Resource Tree.