@@ -7,6 +7,7 @@ New Features:
 - Scene selection inplemented. Teases can define which Scenes are eligible
   to start from and the Title Card of those Scenes.
 - Node debugger implemented.
+- Button to open the Engine Settings folder added to debug tab.
 
 Fixed Bugs:
 - Scene Resources update if the resource is removed or changed somewhere else.
